# worldcup

./: .env.example  .gitignore  CLAUDE.md  README.md  TECHNICAL.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
components/: BetPanel.tsx  FlashMarket.tsx  Icons.tsx  Layout.tsx  MarketsScreen.tsx  MatchScreen.tsx  Segmented.tsx  SettlementPanel.tsx  Shell.tsx  Timeline.tsx  WalletProvider.tsx
docs/: TASKS.md  architecture.md  demo-script.md  payout-vectors.json  settlement-spec.md  settler-runbook.md  txline-feedback.md  wire-notes.md
lib/: chain.ts  crowdSim.ts  demo-ops.ts  demo.ts  markets.ts  pools.ts  useDemo.ts  usePools.ts
lib/idl/: exact_match.json
pages/: _app.tsx  index.tsx  mint.tsx
pages/api/: mint.ts
pages/api/demo/: reset.ts  settle.ts  state.ts
pages/match/: [fixtureId].tsx
program/: Anchor.toml
program/programs/exact-match/: Cargo.toml
program/programs/exact-match/src/: lib.rs  payout.rs
recordings/: .gitignore
recordings/devnet/18209181/: historical.ndjson  meta.json  scores.ndjson  timeline-1s.manifest.json
recordings/devnet/18213979/: historical.ndjson  meta.json  scores.ndjson  timeline-1s.manifest.json
recordings/devnet/18218149/: historical.ndjson  meta.json  scores.ndjson  timeline-1s.manifest.json
recordings/devnet/18222446/: historical.ndjson  meta.json  (+2 more)
recordings/sample/: README.md
services/ingest/: package.json
services/settler/: package.json  tsconfig.json
styles/: ui.css
web/: next.config.mjs  package.json  tailwind.config.js  tsconfig.json
(+90 files in other folders)
